[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hambot-oled"
version = "0.1.0"
description = "HamBot OLED network display (Raspberry Pi)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Chance Hamilton" }]
license = { text = "MIT" }
dependencies = [
  "Pillow>=10.0",
  "adafruit-blinka>=8.0.0",
  "adafruit-circuitpython-ssd1306>=2.12.0",
]

[project.urls]
Homepage = "https://github.com/biorobaw/HamBot_OLED"

[project.scripts]
hambot-oled = "hambot_oled.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
